# tikv

./: Cargo.toml
cmd/: Cargo.toml
cmd/src/: server.rs
components/backup/: Cargo.toml
components/error_code/src/: coprocessor.rs
components/raftstore/: Cargo.toml
components/test_coprocessor/: Cargo.toml
components/tidb_query/: Cargo.toml
components/tidb_query/src/: lib.rs
components/tidb_query/src/batch/: runner.rs
components/tidb_query/src/codec/: error.rs
components/tidb_query/src/expr/: builtin_wasm.rs  ctx.rs  mod.rs  scalar_function.rs
components/tidb_query/src/rpn_expr/: impl_cast.rs
components/tidb_query_datatype/: Cargo.toml
components/tikv_util/: Cargo.toml
components/tipb_helper/: Cargo.toml
components/udf/: Cargo.toml  http.wasm  nbody.wasm  nbody_udf.wasm
components/udf/examples/http/: Cargo.toml
components/udf/examples/http/src/: lib.rs
components/udf/src/: lib.rs  store.rs  wasm.rs
src/: lib.rs
src/coprocessor/statistics/: analyze.rs
tests/: Cargo.toml
tests/integrations/server/: mod.rs
