[package]
description = "TiKV query engine data types"
edition = "2018"
name = "tidb_query_datatype"
publish = false
version = "0.0.1"

[features]
prost-codec = ["tipb/prost-codec"]
protobuf-codec = ["tipb/protobuf-codec"]

[dependencies]
bitflags = "1.0"
bstr = "0.2.8"
error_code = {path = "../error_code"}
failure = "0.1"
log_wrappers = {path = "../log_wrappers"}
tikv_alloc = {path = "../tikv_alloc"}
tipb = {git = "https://github.com/tidb-hackathon-2020-wasm-udf/tipb.git", branch = "wasm-udf-r4", default-features = false}
