[package]
edition = "2018"
name = "tikv_util"
publish = false
version = "0.1.0"

[features]
failpoints = ["fail/failpoints"]

[dependencies]
async-speed-limit = "0.3"
backtrace = "0.3.9"
byteorder = "1.2"
chrono = "0.4"
coarsetime = "0.1"
codec = {path = "../codec"}
configuration = {path = "../configuration"}
crc32fast = "1.2"
crossbeam = "0.8"
derive_more = "0.99.3"
error_code = {path = "../error_code"}
fail = "0.4"
fs2 = "0.4"
futures = "0.1"
futures03 = {package = "futures", version = "0.3"}
fxhash = "0.2.1"
grpcio = {version = "0.5", default-features = false, features = ["openssl-vendored"]}
lazy_static = "1.3"
libc = "0.2"
log = {version = "0.4", features = ["max_level_trace", "release_max_level_debug"]}
log_wrappers = {path = "../log_wrappers"}
num_cpus = "1"
openssl = "0.10"
prometheus = {version = "0.8", features = ["nightly", "push"]}
quick-error = "1.2.2"
rand = "0.7"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
slog = {version = "2.3", features = ["max_level_trace", "release_max_level_debug"]}
slog-async = "2.3"
slog-global = {version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "0e23a5baff302a9d7bccd85f8f31e43339c2f2c1"}
slog-json = "2.3"
slog-term = "2.4"
sysinfo = "0.14"
tempfile = "3.0"
tikv_alloc = {path = "../tikv_alloc"}
time = "0.1"
tokio-core = "0.1"
tokio-executor = "0.1"
tokio-sync = "0.1.7"
tokio-timer = "0.2"
url = "2"
zeroize = {version = "1.1", features = ["alloc"]}

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.7"
procinfo = {git = "https://github.com/tikv/procinfo-rs", rev = "5125fc1a69496b73b26b3c08b6e8afc3c665a56e"}

[dependencies.yatp]
branch = "master"
git = "https://github.com/tikv/yatp.git"

[dev-dependencies]
futures-cpupool = "0.1"
panic_hook = {path = "../panic_hook"}
protobuf = "2"
regex = "1.0"
tempfile = "3.0"
toml = "0.4"
utime = "0.2"
