[package]
edition = "2018"
name = "tipb_helper"
publish = false
version = "0.0.1"

[features]
prost-codec = [
  "tidb_query_datatype/prost-codec",
  "tipb/prost-codec",
]
protobuf-codec = [
  "tidb_query_datatype/protobuf-codec",
  "tipb/protobuf-codec",
]

[dependencies]
codec = {path = "../codec"}
tidb_query_datatype = {path = "../tidb_query_datatype"}
# tipb = { git = "https://github.com/pingcap/tipb.git", default-features = false }
tipb = {git = "https://github.com/tidb-hackathon-2020-wasm-udf/tipb.git", branch = "wasm-udf-r4", default-features = false}
