[package]
edition = "2018"
name = "udf"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
quick-error = "1.2.3"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0.23"
wasmer = "1.0"
wasmer-wasi = "1.0.1"
